--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -29,3 +29,11 @@
 .btn:hover {
     background: #444;
 }
+
+.camera {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    border-radius: 50%;
+    z-index: 11111;
+}
